// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton Component should render animated skeleton correctly 1`] = `
<div
  data-testid="skeleton"
>
  <div
    class="loading active"
    style="width: 100%; height: 30px; border-radius: 0;"
  />
</div>
`;

exports[`Skeleton Component should render circle skeleton correctly 1`] = `
<div
  data-testid="skeleton"
>
  <div
    class="loading "
    style="width: 30px; height: 30px; border-radius: 50%;"
  />
</div>
`;

exports[`Skeleton Component should render with adaptive height correctly 1`] = `
<div
  data-testid="skeleton"
>
  <div
    class="loading "
    style="width: 100%; height: 60px; border-radius: 0;"
  />
</div>
`;

exports[`Skeleton Component should render with custom height correctly 1`] = `
<div
  data-testid="skeleton"
>
  <div
    class="loading "
    style="width: 100%; height: 20px; border-radius: 0;"
  />
</div>
`;

exports[`Skeleton Component should render with rows correctly 1`] = `
<div
  data-testid="skeleton"
>
  <div
    class="loading "
    style="width: 100%; height: 30px; border-radius: 0;"
  />
  <div
    class="loading "
    style="width: 100%; height: 30px; border-radius: 0;"
  />
</div>
`;
